# kaggle-env-local

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
util/: download_dataset.py  upload_dataset.py
