[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
torchaudio = [{ index = "pytorch-cu130" }]

[tool.mypy]
ignore_missing_imports = true

[tool.taskipy.tasks]
run = "uv run --env-file ./.env"

[project]
name = "kaggle-env-local"
version = "0.2.0"
description = "development environment for kaggle"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.3.0",
    "hydra-core>=1.3.2",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "natsort>=8.4.0",
    "numpy>=2.3.4",
    "optuna>=4.5.0",
    "optuna-integration>=4.5.0",
    "polars>=1.35.1",
    "python-dotenv>=1.2.1",
    "schedulefree>=1.4.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "segmentation-models-pytorch>=0.5.0",
    "timm-3d>=1.0.1",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "wandb>=0.22.3",
]
